--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,11 +1,20 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%= f.label :genre_id %>
+  <%= f.text_field :genre_id, list: "genres_autocomplate" %>
+  <datalist id="genres_autocomplate">
+    <% Genre.all.each do |genre| %>
+      <option value="<%= genre.name %>">
+    <% end %>
+  </datalist>
+  <%= f.text_field :notes_1 %>
+  <%= f.text_field :notes_2 %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
